syntax = "proto3";
package tessornetwork.fury.furymint;

// Options section
option go_package = "github.com/tessornetwork/fury/x/furymint/types";

// Import section
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/duration.proto";

message Params {
  option (gogoproto.equal) = true;

  string conversion_rate = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  google.protobuf.Duration freeze_period = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
}